--- a/.github/workflows/Frontend.yml
+++ b/.github/workflows/Frontend.yml
@@ -2,6 +2,7 @@ name: Frontend CI
 
 on:
   push:
+  #This CI/CD pipleine runs on the Frontend branch
     branches:
       - frontend/main
   pull_request:
@@ -21,8 +22,10 @@ jobs:
       with:
         node-version: 18
 
+    #Install the react native dependencies
     - name: Install dependencies
       run: npm install
 
+   #Run the Jest tests 
     - name: Run Jest tests
       run: npm test
