--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main # Run on push to the main branch
+      - Marc
   pull_request:
     branches:
       - main # Run on pull request to the main branch
