--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,15 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main # Run on push to the main branch
-      - Marc
+      - main
+      - Marc # Run on push to the 'Marc' branch
   pull_request:
     branches:
       - main # Run on pull request to the main branch
 
 jobs:
   test:
-    runs-on: ubuntu-latest # Use the latest Ubuntu image
+    runs-on: ubuntu-latest
 
     services:
       postgres:
@@ -30,7 +30,7 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
@@ -40,9 +40,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Build Docker image
-        run: docker-compose build
+      - name: Build Docker Containers
+        run: docker compose build
 
-      - name: Run tests
-        run: |
-          docker-compose exec web pytest
+      - name: Start Docker Compose
+        run: docker compose up -d
+
+      - name: Wait for Services
+        run: sleep 10 # Wait for services to be ready
+
+      - name: Run Migrations
+        run: docker compose exec web python manage.py migrate
+
+      - name: Run Tests
+        run: docker compose exec web pytest
