--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,5 +52,13 @@ jobs:
       - name: Run Migrations
         run: docker compose exec web python manage.py migrate
 
-      - name: Run Tests
-        run: docker compose exec web pytest
+      - name: Install Frontend Dependencies
+        run: |
+          npm install # Install frontend dependencies for React Native (directly on the CI runner)
+
+      - name: Run Jest Tests for Frontend
+        run: |
+          npm test -- --coverage # Run Jest tests directly on the CI runner for React Native
+
+      - name: Run Backend Tests
+        run: docker compose exec web pytest # Run backend tests (optional, if you're using pytest)
