--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Run Jest Tests for Frontend
         run: |
           cd frontend # Navigate to the frontend directory
-          npm test -- --coverage # Run Jest tests directly on the CI runner for React Native
+          npm test -- --ci --coverage # Run Jest tests for React Native
 
       - name: Run Backend Tests
         run: docker compose exec web pytest # Run backend tests (optional, if you're using pytest)
