--- a/frontend/app.json
+++ b/frontend/app.json
@@ -18,7 +18,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyD4nq4RqZJ7U4sSqja5aemdmlQISzIv_Dg"
+          "apiKey": '${process.env.MAPS_API_KEY}'
         }
       }
 
