--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,11 @@
     "axios": "^1.7.9",
     "expo": "^52.0.28",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.4",
+    "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -41,8 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-location": "~18.0.5"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -53,6 +53,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
