--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-vector-icons/common": "^11.0.0",
     "@react-native/codegen": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.12",
@@ -56,7 +58,6 @@
     "jest-expo": "~52.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.3.1",
-    "@react-native-community/cli": "latest",
     "typescript": "^5.3.3"
   },
   "private": true
