--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,16 +2,19 @@ name: Frontend CI
 
 on:
   push:
-  #This CI/CD pipleine runs on the Frontend branch and all the frontend branches
+  #This CI/CD pipleine runs on the Frontend branch and all the frontend branches only
     branches:
       - frontend
       - frontend/*
+      - '!main'
   pull_request:
     branches:
       - frontend
       - frontend/*
+      
 
 jobs:
+
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -31,3 +34,17 @@ jobs:
    #Run the Jest tests 
     - name: Run Jest tests
       run: npm test
+  # Runnint sonarCloud testing
+  sonarcloud:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN:  #
