--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "jest-expo": "~52.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.3.1",
+    "sonarqube-scanner": "^4.2.6",
     "typescript": "^5.3.3"
   },
   "private": true
