--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
       - main
-      - Marc # Run on push to the 'Marc' branch
+      - backend
   pull_request:
     branches:
-      - main # Run on pull request to the main branch
+      - main
+      - backend
 
 jobs:
   test:
