updated CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - backend
+      - frontend
   pull_request:
     branches:
       - main
       - backend
+      - frontend
 
 jobs:
   test:
