--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,4 +66,4 @@ jobs:
           npm test -- --coverage # Run Jest tests for React Native
 
       - name: Run Backend Tests
-        run: docker compose exec web pytest # Run backend tests (optional, if you're using pytest)
+        run: docker compose exec web pytest
