--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
 
       - name: Install Frontend Dependencies
         run: |
-          cd frontend # Navigate to the frontend directory
-          npm install # Install frontend dependencies for React Native (directly on the CI runner)
+          cd frontend
+          npm install
 
       - name: Run Jest Tests for Frontend
         run: |
