--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     services:
       postgres:
@@ -67,3 +67,31 @@ jobs:
 
       - name: Run Backend Tests
         run: docker compose exec web pytest
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "stable"
+
+      - name: Launch Simulator
+        id: sim
+        uses: futureware-tech/simulator-action@v4
+
+      - name: Install the Application
+        run: |
+          flutter run -d ${{steps.sim.outputs.udid}} &
+          while ! xcrun simctl get_app_container booted host.exp.Exponent; do 
+            sleep 5
+          done;
+
+      - name: Install Maestro
+        run: curl -fsSL "https://get.maestro.mobile.dev" | bash
+
+      - name: Maestro test
+        run: maestro record maestro/acceptance/*.yaml --local test.mp4
+
+      - name: Upload Test Video
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-video
+          path: test.mp4
