--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
       - frontend
 
 jobs:
-  test:
+  unit-tests:
     runs-on: ubuntu-latest
 
     services:
@@ -68,6 +68,9 @@ jobs:
       - name: Run Backend Tests
         run: docker compose exec web pytest
 
+  maestro-tests:
+    runs-on: macos-latest
+    steps:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
 
