--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,5 +100,5 @@ jobs:
         run: |
           export PATH="$PATH":"$HOME/.maestro/bin"
           cd frontend
-          npm run ios
+          expo start --ios
           maestro test maestro/acceptance/*.yaml
