--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,5 +100,6 @@ jobs:
         run: |
           export PATH="$PATH":"$HOME/.maestro/bin"
           cd frontend
+          npm install --save-dev @types/react-native
           expo start --ios
           maestro test maestro/acceptance/*.yaml
