--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
 
       - name: Run Maestro tests
         run: |
+          export PATH="$PATH":"$HOME/.maestro/bin"
           maestro test maestro/acceptance/*.yaml
 
       - name: Upload Test Video
