--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
       - name: Run Maestro tests
         run: |
           export PATH="$PATH":"$HOME/.maestro/bin"
+          cd frontend
           maestro test maestro/acceptance/*.yaml
 
       - name: Upload Test Video
