--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   ci-pipeline:
-    runs-on: macos-latest # macOS runner for compatibility with Expo/iOS
+    runs-on: macos-latest
 
     services:
       postgres:
@@ -36,19 +36,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker for the backend
-      - name: Set up Docker
+      # Step 2: Install Docker on macOS
+      - name: Install Docker
+        run: |
+          brew install --cask docker
+          sudo /Applications/Docker.app/Contents/MacOS/Docker & # Run Docker in the background
+          sleep 30 # Allow Docker to initialize
+
+      # Step 3: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 3: Build Docker containers
+      # Step 4: Build Docker containers
       - name: Build Docker Containers
         run: docker compose build
 
-      # Step 4: Start Docker Compose (backend and DB services)
+      # Step 5: Start Docker Compose (backend and DB services)
       - name: Start Docker Compose
         run: docker compose up -d
 
-      # Step 5: Wait for PostgreSQL to be ready
+      # Step 6: Wait for PostgreSQL to be ready
       - name: Wait for PostgreSQL to be ready
         run: |
           while ! docker exec -t postgres pg_isready -U postgres; do
@@ -56,38 +63,38 @@ jobs:
             sleep 5
           done
 
-      # Step 6: Run backend migrations
+      # Step 7: Run backend migrations
       - name: Run Backend Migrations
         run: docker compose exec web python manage.py migrate
 
-      # Step 7: Install frontend dependencies
+      # Step 8: Install frontend dependencies
       - name: Install Frontend Dependencies
         run: |
           cd frontend
           npm install
 
-      # Step 8: Run Jest tests for frontend
+      # Step 9: Run Jest tests for frontend
       - name: Run Jest Tests for Frontend
         run: |
           cd frontend
           npm test -- --coverage
 
-      # Step 9: Run Backend Tests
+      # Step 10: Run Backend Tests
       - name: Run Backend Tests
         run: docker compose exec web pytest
 
-      # Step 10: Install Expo CLI (Ensure Expo is installed globally)
+      # Step 11: Install Expo CLI (Ensure Expo is installed globally)
       - name: Install Expo CLI
         run: |
           npm install -g expo-cli
 
-      # Step 11: Start Expo app (iOS emulator)
+      # Step 12: Start Expo app (iOS emulator)
       - name: Start Expo app (iOS)
         run: |
           cd frontend
           npm run ios &  # Start Expo in the background
 
-      # Step 12: Wait for the iOS emulator to boot
+      # Step 13: Wait for the iOS emulator to boot
       - name: Wait for iOS emulator to be ready
         run: |
           while ! xcrun simctl list devices | grep "(Booted)"; do
@@ -95,12 +102,12 @@ jobs:
             sleep 5
           done
 
-      # Step 13: Install Maestro
+      # Step 14: Install Maestro
       - name: Install Maestro
         run: |
           curl -fsSL "https://get.maestro.mobile.dev" | bash
 
-      # Step 14: Run Maestro tests
+      # Step 15: Run Maestro tests
       - name: Run Maestro tests
         run: |
           cd frontend
