--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -33,8 +33,8 @@ jobs:
 
    #Run the Jest tests 
     - name: Run Jest tests
-      run: cd frontend && npm test -- __tests__/*
-
+      run: npm test
+      working-directory: frontend
   # Runnint sonarCloud testing
   sonarcloud:
     runs-on: ubuntu-latest
