--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,11 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["text", "lcov", "html"]
+
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
