--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,10 @@ pytest
 pytest-django
 django-cors-headers
 jsonschema
-django-rest-framework
+djangorestframework==3.15.0
+
+
+social-auth-app-django==5.0.0
+social-auth-core==4.5.6
+requests-oauthlib==1.3.1
+oauthlib==3.2.2
