--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,17 +2,29 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "noImplicitAny": false,
-    "strict": true,
+    "strict": false,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "jsx": "react-native", 
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/screens/OutdoorNav/CampusMaptsx", "app/components/ui/ThemeToggle.tsx", "app/styles.tsx"  ]
+    "expo-env.d.ts",
+    "app/screens/OutdoorNav/CampusMaptsx",
+    "app/components/ui/ThemeToggle.tsx",
+    "app/styles.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
