--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "expo": "^52.0.28",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
@@ -54,9 +56,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-auth-session": "~6.0.3",
-    "expo-crypto": "~14.0.2"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
