--- a/frontend/app.json
+++ b/frontend/app.json
@@ -8,11 +8,17 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    
+    
     "ios": {
+      "bundleIdentifier": "com.haifaa.pathfinders",
       "supportsTablet": true,
       "userInterfaceStyle": "automatic"
     },
+
+
     "android": {
+      "package": "com.haifaa.pathfinders",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff",
