--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,19 +15,24 @@
     "preset": "jest-expo",
     "collectCoverage": true,
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "lcov", "html"]
-
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/analytics": "^21.11.0",
+    "@react-native-firebase/app": "^21.11.0",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native/codegen": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.9",
-    "expo": "^52.0.28",
+    "expo": "^52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.12",
@@ -45,7 +50,7 @@
     "geolib": "^3.3.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "^0.78.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
@@ -55,10 +60,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-smartlook-analytics": "^2.1.19",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
-
+    "react-native-webview": "13.12.5",
+    "smartlook-react-native-wrapper": "^1.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -66,7 +72,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.3",
@@ -77,3 +83,4 @@
   },
   "private": true
 }
+
