updates some dependencies

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -17,8 +17,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff",
         "userInterfaceStyle": "automatic"
-            
-    }},
+      }
+    },
     "web": {
       "bundler": "metro",
       "output": "static",
@@ -34,7 +34,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
