--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "preset": "jest-expo",
     "collectCoverage": true,
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "lcov", "html"]
-
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -29,23 +32,22 @@
     "axios": "^1.7.9",
     "expo": "^52.0.28",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.3",
+    "expo-constants": "~17.0.7",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.6",
+    "expo-location": "~18.0.7",
     "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "geolib": "^3.3.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
@@ -58,7 +60,6 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
-
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -67,6 +68,7 @@
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.3",
