--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "expo": "^52.0.28",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
+    "expo-constants": "~17.0.7",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
@@ -35,6 +35,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.6",
+    "expo-random": "^14.0.1",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
