--- a/frontend/app.json
+++ b/frontend/app.json
@@ -35,7 +35,14 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "expo-calendar",
+        {
+          "calendarPermission": "The app needs to access your calendar."
+        }
+      ]
+      
     ],
     "experiments": {
       "typedRoutes": true
