--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.9",
     "expo": "^52.0.28",
     "expo-blur": "~14.0.3",
+    "expo-calendar": "~14.0.6",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -48,6 +49,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
