--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,5 +14,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/screens/OutdoorNav/CampusMaptsx", "app/components/ui/ThemeToggle.tsx", "app/styles.tsx"  ]
+, "app/screens/OutdoorNav/CampusMaptsx", "app/components/ui/ThemeToggle.tsx", "app/styles.tsx", "_tests_/useDirectionLogic.test.tsx"  ]
 }
