Jest coverage update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,11 @@
       "text",
       "lcov",
       "html"
-    ]
+    ],
+    "collectCoverageFrom": [
+    "app/**/*.{js,jsx,ts,tsx}",  
+    "!app/**/*.d.ts"             
+  ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
