--- a/frontend/maestro/acceptance/commuter_transportation.yaml
+++ b/frontend/maestro/acceptance/commuter_transportation.yaml
@@ -1,3 +1,14 @@
 #issue #57
 appId: host.exp.exponent
 ---
+- tapOn:
+    point: "6%,9%" 
+- tapOn: "Outdoor Directions"
+- tapOn:
+    point: 20%,46%
+- tapOn:
+    point: "50%,46%"
+- tapOn:
+    point: "80%,46%"
+- tapOn:
+    point: 20%,46%
