--- a/frontend/maestro/acceptance/start_destination.yaml
+++ b/frontend/maestro/acceptance/start_destination.yaml
@@ -1,12 +1,10 @@
 #issue #55
 appId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%"  
-- tapOn: "Campus Map"
+- tapOn: "Start Location"
+- inputText: "Hall Building"
+- tapOn: "H Building Concordia University, Boulevard De Maisonneuve Ouest, Montreal, QC, Canada"
 - tapOn: "LB Building"
 - tapOn: "LB Building"
 - tapOn: "YES"
-- tapOn:
-    point: "6%,9%"
-- tapOn: "Outdoor Directions"
+- tapOn: "GO"
