--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,14 @@
       "html"
     ],
     "collectCoverageFrom": [
-    "app/**/*.{js,jsx,ts,tsx}",  
-    "!app/**/*.d.ts"             
-  ]
+      "app/**/*.{js,jsx,ts,tsx}",
+      "!app/**/*.d.ts"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native/codegen": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -72,7 +72,7 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^13.0.1",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
@@ -80,7 +80,7 @@
     "jest": "^29.7.0",
     "jest-expo": "~52.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "^18.3.1",
     "sonarqube-scanner": "^4.2.6",
     "typescript": "^5.3.3"
   },
