--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -29,7 +29,7 @@ jobs:
 
     #Install the react native dependencies
     - name: Install dependencies
-      run: cd frontend && npm install
+      run: npm install --save-dev @testing-library/react-hooks --legacy-peer-deps  #temporary fix for the dependency
 
    #Run the Jest tests 
     - name: Run Jest tests
