--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,7 +28,7 @@ jobs:
       #Install the react native dependencies
       - name: Install dependencies
         #run: cd frontend && npm install   # this has been changed for now because of the react hook dependency problem
-        run: npm install --save-dev @testing-library/react-hooks --legacy-peer-deps
+        run: cd frontend && npm install --save-dev @testing-library/react-hooks --legacy-peer-deps
 
 
       #Run the Jest tests
