--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,12 @@
       "!app/**/index.{js,ts,tsx}",
       "!app/data/**",
       "!app/**/types.{js,ts,tsx}",
-      "!app/assets/**"
+      "!app/assets/**",
+      "!app/(tabs)/**",
+      "!app/components/maps/building_outlines.tsx",
+      "!app/components/maps/concordiaBuildings.ts",
+      "!**/node_modules/**",
+      "!**/tests/**"
     ]
   },
   "dependencies": {
