Setup Maestro Tests
Initial setup for maestro tests on issue #60, #61, #62.

--- a/frontend/maestro/acceptance/identify_next_class.yaml
+++ b/frontend/maestro/acceptance/identify_next_class.yaml
@@ -1,5 +1,6 @@
 #issue 61
 ppId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%" 
+- tapOn: "Show navigation menu"
+- tapOn: "Directions to next class"
+- assertVisible: "Calendar"
