Maestro Tests Modifications
Created new tests and made changes to older tests to be more compatible with all devices.

--- a/frontend/maestro/acceptance/58_shuttle_time.yaml
+++ b/frontend/maestro/acceptance/58_shuttle_time.yaml
@@ -1,7 +1,5 @@
-#issue #58
 appId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%" 
+- tapOn: "Show navigation menu"
 - tapOn: "Concordia Shuttle"
 - assertVisible: "BUS SHUTTLE DEPARTURE TIMES"   
