--- a/frontend/maestro/acceptance/61_identify_next_class.yaml
+++ b/frontend/maestro/acceptance/61_identify_next_class.yaml
@@ -1,6 +1,6 @@
-#issue 61
 ppId: host.exp.exponent
 ---
 - tapOn: "Show navigation menu"
 - tapOn: "Directions to next class"
-- assertVisible: "Calendar"
+- tapOn: "DIRECTIONS TO NEXT CLASS"
+- tapOn: "OK"
