--- a/frontend/maestro/acceptance/50_toggle_campus.yaml
+++ b/frontend/maestro/acceptance/50_toggle_campus.yaml
@@ -1,8 +1,6 @@
-#issue #50
 appId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%"  
+- tapOn: "Show navigation menu"  
 - tapOn: "Campus Map"
 - tapOn: "Loyola"
 - tapOn: "SGW"
