--- a/frontend/maestro/acceptance/52_pop_up.yaml
+++ b/frontend/maestro/acceptance/52_pop_up.yaml
@@ -1,8 +1,6 @@
-#issue #52
 appId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%"  
+- tapOn: "Show navigation menu"  
 - tapOn: "Campus Map"
 - tapOn: "LB Building"
 - assertVisible: "LB Building"  
