--- a/frontend/maestro/acceptance/57_commuter_transportation.yaml
+++ b/frontend/maestro/acceptance/57_commuter_transportation.yaml
@@ -1,8 +1,6 @@
-#issue #57
 appId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%" 
+- tapOn: "Show navigation menu"
 - tapOn: "Outdoor Directions"
 - tapOn:
     point: 20%,46%
