--- a/frontend/maestro/acceptance/60_google_calendar.yaml
+++ b/frontend/maestro/acceptance/60_google_calendar.yaml
@@ -1,6 +1,7 @@
-#issue 60
 ppId: host.exp.exponent
 ---
 - tapOn: "Show navigation menu"
 - tapOn: "Directions to next class"
-- assertVisible: "Calendar"
+- tapOn: "SWITCH CALENDAR"
+- tapOn: "My Classes"
+- tapOn: "OK"
