--- a/frontend/maestro/acceptance/73_find_room_Success.yaml
+++ b/frontend/maestro/acceptance/73_find_room_Success.yaml
@@ -1,8 +1,6 @@
-#issue #73
 appId: host.exp.exponent
 ---
-- tapOn:
-    point: "6%,9%"  
+- tapOn: "Show navigation menu" 
 - tapOn: "Indoor Directions"
 - tapOn: "Find a room"
 - tapOn: "H-920"
