--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "expo-constants": "^17.0.5",
     "expo-permissions": "^14.4.0",
     "react-native-dotenv": "^3.4.11"
+  },
+  "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1"
   }
 }
