Fixed issues with tests

--- a/frontend/maestro/acceptance/67_poi_display_info.yaml
+++ b/frontend/maestro/acceptance/67_poi_display_info.yaml
@@ -1,11 +1,21 @@
-ppId: host.exp.exponent
+appId: host.exp.exponent
 ---
 - tapOn: "Show navigation menu"
 - tapOn: "Points of interests"
-- tapOn: "Loyola"
-- tapOn: "SGW"
-- tapOn: "MANUALLY FECTH THE PLACE"
-- assertVisible: "Open Hours: "
-- assertVisible: "Monday: 9:00 AM – 5:00 PM"
+- tapOn:
+    point: "10%,94%"
+- tapOn: "Coffee"
+- tapOn: "Apply"
+- tapOn: "Eggspectation - Maisonneuve"
+- assertVisible: "Name : Eggspectation - Maisonneuve"
+- assertVisible: "Monday: 7:00 AM – 3:00 PM"
+- tapOn:
+    point: "72%,50%"
+- tapOn:
+    point: "10%,94%"
+- tapOn: "Restaurants"
+- tapOn: "Parks"
+- tapOn: "Apply"
+- tapOn: "Restaurant Boustan"
 - tapOn:
     point: "72%,50%"
