--- a/frontend/maestro/acceptance/110_direction_between_rooms.yaml
+++ b/frontend/maestro/acceptance/110_direction_between_rooms.yaml
@@ -1,2 +1,11 @@
 appId: host.exp.exponent
 ---
+- tapOn: "Show navigation menu"
+- tapOn: "Indoor Directions"
+- tapOn: "Get Directions"
+- tapOn: "Start location (e.g., H-920)"
+- inputText: "H-531"
+- tapOn: "Destination (e.g., H-945)"
+- inputText: "H-819"
+- tapOn: "Get Directions"
+- tapOn: "Yes"
