--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,10 +45,11 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.9",
-    "expo": "^52.0.38",
+    "constants": "^0.0.2",
+    "expo": "^52.0.40",
     "expo-blur": "~14.0.3",
     "expo-calendar": "~14.0.6",
-    "expo-constants": "~17.0.7",
+    "expo-constants": "^17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
