--- a/frontend/maestro/acceptance/61_identify_next_class.yaml
+++ b/frontend/maestro/acceptance/61_identify_next_class.yaml
@@ -3,4 +3,6 @@ appId: host.exp.exponent
 - tapOn: "Show navigation menu"
 - tapOn: "Directions to next class"
 - tapOn: "DIRECTIONS TO NEXT CLASS"
-- tapOn: "OK"
+- tapOn:
+    id: "android:id/button1"
+- tapOn: "GO"
