Updated Maestro Tests
Test for #110 now works.

--- a/frontend/maestro/acceptance/110_direction_between_rooms.yaml
+++ b/frontend/maestro/acceptance/110_direction_between_rooms.yaml
@@ -5,7 +5,7 @@ appId: host.exp.exponent
 - tapOn: "Get Directions"
 - tapOn: "Start location (e.g., H-920)"
 - inputText: "H-531"
-- tapOn: "Destination (e.g., H-945)"
-- inputText: "H-819"
+- tapOn: "Destination (room or amenity)"
+- inputText: "H-631"
 - tapOn: "Get Directions"
 - tapOn: "Yes"
