--- a/frontend/maestro/acceptance/107_shortest_path_indoors.yaml
+++ b/frontend/maestro/acceptance/107_shortest_path_indoors.yaml
@@ -5,6 +5,6 @@ appId: host.exp.exponent
 - tapOn: "Get Directions"
 - tapOn: "Start location (e.g., H-920)"
 - inputText: "H-531"
-- tapOn: "Destination (e.g., H-945)"
+- tapOn: "Destination (room or amenity)"
 - inputText: "H-585"
 - tapOn: "Get Directions"
