--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   db:
     image: postgres:15
@@ -27,11 +29,11 @@ services:
         "0.0.0.0:8000",
       ]
     environment:
-      - DATABASE_URL=postgres://admin:password@db:5432/campus_db
-      - DJANGO_SETTINGS_MODULE=backend.settings
+      DATABASE_URL: postgres://admin:password@db:5432/campus_db
+      DJANGO_SETTINGS_MODULE: backend.settings
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}  # Pulled directly from host environment
     ports:
       - "8000:8000"
-    #command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
 volumes:
   postgres_data:
