--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:15
@@ -18,20 +16,14 @@ services:
     container_name: backend_container
     depends_on:
       - db
-    command:
-      [
-        "./wait-for-it.sh",
-        "db:5432",
-        "--",
-        "python",
-        "manage.py",
-        "runserver",
-        "0.0.0.0:8000",
-      ]
+    command: >
+      sh -c "./wait-for-it.sh db:5432 -- \
+             python manage.py migrate && \
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       DATABASE_URL: postgres://admin:password@db:5432/campus_db
       DJANGO_SETTINGS_MODULE: backend.settings
-      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}  # Pulled directly from host environment
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
     ports:
       - "8000:8000"
 
